# solitary-forge

./: .forge.yml  .gitignore  DOCS.md  README.md  devenv.nix  devenv.yaml  pyproject.toml
src/: example_script(3).py  readme(2).md
src/examples/: demo.py
src/solitary_forge/: __init__.py  cli.py  exceptions.py  forge.py  models.py  plugin.py  settings.py
src/solitary_forge/context/: context_builder.py
src/solitary_forge/generators/: __init__.py  base.py  compose.py  dockerfile.py  registry.py
src/solitary_forge/output/: output_manager.py
src/solitary_forge/rendering/: template_renderer.py
src/solitary_forge/validation/: validation_system.py
src/tests/: conftest.py  old_simple_test.py  old_test_forge.py  old_test_git_cloning.py  test_cli.py  test_forge.py  test_models.py  test_plugin.py
